# xgboost-next-app-example

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  start-backend.sh
ai-planning-docs/plans_archive/: MODULAR_REFACTORING_SUMMARY.md  MONGODB_MIGRATION_PLAN.md  README_APP.md  REFACTORING_SUMMARY.md  mongodb_schema_examples.md  mongodb_schema_improvements.md  mongodb_simplified_example.json  mongodb_simplified_schema.md
app/: layout.tsx  page.tsx
app/projects/[id]/: page.tsx
app/projects/new/: page.tsx
components/: confirmation-modal.tsx  csv-upload.tsx  data-preview.tsx  lift-chart.tsx  model-lookup.tsx  model-results.tsx  recent-models.tsx  training-progress.tsx
lib/: db.ts
python_api/: __init__.py  code_generator.py  config.py  logging_config.py  main.py  modeling_utils.py  models.py  mongo_utils.py  preprocessing.py  routes.py  xgb_modeling.py  xgb_params.py
python_api/models/: model_1.json  model_10.json  model_12.json  model_13.json  model_14.json  model_16.json  model_2.json  model_3.json  model_4.json  model_5.json  model_7.json  model_8.json  model_9.json
python_api/tests/: conftest.py  test_modeling_utils.py  test_models.py  test_preprocessing_edge_cases.py  test_xgb_params.py
